[package]
name = "dorian"
description = "taggable imageboard engine"
version = "0.1.0"
authors = ["Luiz de Milon <kori@arrowheads.io>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.22", features = ["macros"] }
warp = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel = { version = "^1.4.5", features = ["sqlite"] }
