[package]
name = "dorian"
description = "taggable imageboard engine"
version = "0.1.0"
authors = ["Luiz de Milon <kori@arrowheads.io>"]
edition = "2018"

[dependencies]
sqlx = { version = "0.4.0-beta.1", features = ["macros", "postgres"] }
tokio = { version = "0.2.22", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.9.0"
async-std = { version = "1.6.4", features = ["attributes"] }
eyre = "0.6.0"
